update portfolio page v3

--- a/index.html
+++ b/index.html
@@ -227,24 +227,30 @@
         <div class="skills-container">
           <i class="fab fa-html5"></i>
           <i class="fab fa-css3-alt"></i>
-          <i class="fab fa-wordpress"></i>
-          <i class="fas fa-universal-access"></i>
-          <i class="fab fa-js"></i>
-          <i class="fab fa-ts"></i>
-          <i class="fab fa-react"></i>
-          <!-- <i class="fab fa-sketch"></i>
-          <i class="fab fa-figma"></i> -->
-          <i class="fab fa-git"></i>
-          <i class="fab fa-github"></i>
           <i class="fab fa-chrome"></i>
-          <i class="fas fa-terminal"></i>
+          <i class="fab fa-js-square"></i>
+          <i class="fab fa-node"></i>
           <i class="fab fa-npm"></i>
           <i class="fab fa-yarn"></i>
-          <i class="fab fa-node"></i>
-          <i class="fab fa-python"></i>
+          <i class="fab fa-react"></i>
+          <i class="fab fa-git"></i>
+          <i class="fab fa-github"></i>
+          <i class="fas fa-terminal"></i>
           <i class="fab fa-docker"></i>
-          <i class="fab fa-linux"></i>
           <i class="fab fa-aws"></i>
+          <i class="fab fa-linux"></i>
+          <!-- <i class="fab fa-ubuntu"></i>
+          <i class="fab fa-apple"></i>
+          <i class="fab fa-windows"></i> -->
+          <i class="fab fa-python"></i>
+          <!-- <i class="fab fa-sketch"></i>
+            <i class="fab fa-figma"></i> -->
+          <i class="fab fa-php"></i>
+          <i class="fab fa-wordpress"></i>
+          <i class="fab fa-elementor"></i>
+          <i class="fab fa-wpforms"></i>
+          <i class="fab fa-markdown"></i>
+          <i class="fas fa-universal-access"></i>
           <i class="fab fa-raspberry-pi"></i>
         </div>
       </section>
