update portfolio page v4

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,700;1,200;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
     <link rel="stylesheet" href="./src/css/all.min.css" />
     <title>Shiwei's Profile</title>
@@ -72,8 +73,8 @@
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
-            <i class="fab fa-html5"></i>
-            <i class="fab fa-css3-alt"></i>
+            <i class="icon-html5"></i>
+            <i class="icon-css3"></i>
             <i class="fab fa-wordpress"></i>
             <i class="fab fa-js"></i>
             <i class="fab fa-git"></i>
@@ -101,8 +102,8 @@
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
-            <i class="fab fa-html5"></i>
-            <i class="fab fa-css3-alt"></i>
+            <i class="icon-html5"></i>
+            <i class="icon-css3"></i>
             <i class="fas fa-universal-access"></i>
             <i class="fab fa-js"></i>
             <!-- <i class="fab fa-react"></i> -->
@@ -130,12 +131,12 @@
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
-            <i class="fab fa-html5"></i>
-            <i class="fab fa-css3-alt"></i>
+            <i class="icon-html5"></i>
+            <i class="icon-css3"></i>
             <!-- <i class="fas fa-universal-access"></i> -->
             <i class="fab fa-js"></i>
             <i class="fab fa-react"></i>
-            <i class="fab fa-heroku"></i>
+            <i class="icon-heroku"></i>
             <!-- <i class="fab fa-sketch"></i>
             <i class="fab fa-figma"></i> -->
             <i class="fab fa-git"></i>
@@ -153,7 +154,7 @@
           <summary class="project-titil">My certified skills</summary>
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
-            <i class="fab fa-html5"></i>
+            <i class="icon-html5"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-html" target="_blank"
             ><img src="./src/image/first_certificat.jpg" alt="a certificate HTML"
@@ -177,8 +178,8 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
-            <i class="fab fa-html5"></i>
-            <i class="fab fa-css3-alt"></i>
+            <i class="icon-html5"></i>
+            <i class="icon-css3"></i>
             <i class="fab fa-js"></i>
           </div>
           <a href="https://www.codecademy.com/learn/build-interactive-websites" target="_blank"
@@ -218,40 +219,76 @@
           <a href="https://www.codecademy.com/learn/learn-typescript" target="_blank"
             ><img src="./src/image/Codecademy_learn-TypeScript-course.jpg" alt="a certificate TypeScript"
           /></a>
+
+          <div class="skill-set">
+            <p><strong>Skills qualified: Web development</strong></p>
+            <i class="fab fa-regex"></i>
+          </div>
+          <a href="https://www.codecademy.com/learn/paths/web-development" target="_blank"
+            ><img src="./src/image/Codecademy_Web-Development.jpg" alt="a certificate web development"
+          /></a>
         </details>
       </section>
 
       <!-- Skills -->
       <section id="skills">
         <h3>Skills</h3>
+        <!-- https://www.w3schools.com/icons/fontawesome5_icons_brands.asp -->
+        <h4>Applications and operating systems</h4>
         <div class="skills-container">
-          <i class="fab fa-html5"></i>
-          <i class="fab fa-css3-alt"></i>
-          <i class="fab fa-chrome"></i>
-          <i class="fab fa-js-square"></i>
-          <i class="fab fa-node"></i>
-          <i class="fab fa-npm"></i>
-          <i class="fab fa-yarn"></i>
-          <i class="fab fa-react"></i>
-          <i class="fab fa-git"></i>
+          <i class="icon-osx"></i>
+          <i class="icon-ubuntu"></i>
+          <i class="icon-alpinelinux"></i>
+          <i class="icon-debian"></i>
+          <i class="icon-docker"></i>
+          <i class="icon-nginx-alt"></i>
+          <i class="icon-git"></i>
           <i class="fab fa-github"></i>
-          <i class="fas fa-terminal"></i>
-          <i class="fab fa-docker"></i>
-          <i class="fab fa-aws"></i>
-          <i class="fab fa-linux"></i>
+          <i class="icon-npm"></i>
+          <i class="fab fa-yarn"></i>
+          <i class="icon-aws"></i>
+          <i class="icon-heroku"></i>
+          <i class="fab fa-chrome"></i>
+          <i class="fab fa-markdown"></i>
+          <i class="fas fa-universal-access"></i>
+          <!-- <i class="fab fa-linux"></i> -->
           <!-- <i class="fab fa-ubuntu"></i>
           <i class="fab fa-apple"></i>
           <i class="fab fa-windows"></i> -->
-          <i class="fab fa-python"></i>
-          <!-- <i class="fab fa-sketch"></i>
-            <i class="fab fa-figma"></i> -->
-          <i class="fab fa-php"></i>
-          <i class="fab fa-wordpress"></i>
-          <i class="fab fa-elementor"></i>
-          <i class="fab fa-wpforms"></i>
-          <i class="fab fa-markdown"></i>
-          <i class="fas fa-universal-access"></i>
-          <i class="fab fa-raspberry-pi"></i>
+        </div>
+        <h4>Databases</h4>
+        <div class="skills-container">
+          <i class="icon-mongodb"></i>
+          <i class="icon-postgres-alt"></i>
+          <i class="icon-mysql"></i>
+          <i class="icon-mariadb"></i>
+        </div>
+        <h4>Frameworks</h4>
+        <div class="skills-container">
+          <i class="icon-reactjs"></i>
+          <i class="icon-bootstrap"></i>
+          <i class="icon-wordpress"></i>
+        </div>
+        <h4>Programming languages</h4>
+        <div class="skills-container">
+          <i class="icon-css3"></i>
+          <img
+            src="https://cdn.iconscout.com/icon/free/png-256/typescript-2336947-1982828.png"
+            srcset="https://cdn.iconscout.com/icon/free/png-512/typescript-2336947-1982828.png 2x"
+            alt="Typescript Icon"
+            width="40"
+            height="40"
+          />
+          <i class="icon-html5"></i>
+          <i class="icon-javascript"></i>
+          <i class="icon-nodejs"></i>
+          <i class="icon-python"></i>
+          <i class="icon-shell"></i>
+          <i class="icon-php"></i>
+        </div>
+        <h4>favoriate hardwares</h4>
+        <div class="skills-container">
+          <i class="icon-raspberrypi"></i>
         </div>
       </section>
 
