update portfolio page v5

--- a/index.html
+++ b/index.html
@@ -75,16 +75,17 @@
             <p><strong>Skills applied:</strong></p>
             <i class="icon-html5"></i>
             <i class="icon-css3"></i>
-            <i class="fab fa-wordpress"></i>
-            <i class="fab fa-js"></i>
-            <i class="fab fa-git"></i>
+            <i class="icon-wordpress"></i>
+            <i class="icon-javascript"></i>
+            <i class="icon-git"></i>
             <i class="fab fa-chrome"></i>
-            <i class="fas fa-terminal"></i>
-            <i class="fab fa-python"></i>
-            <i class="fab fa-docker"></i>
-            <i class="fab fa-linux"></i>
-            <i class="fab fa-aws"></i>
-            <i class="fab fa-raspberry-pi"></i>
+            <i class="icon-shell"></i>
+            <i class="icon-python"></i>
+            <i class="icon-nginx-alt"></i>
+            <i class="icon-docker"></i>
+            <i class="icon-ubuntu"></i>
+            <i class="icon-aws"></i>
+            <i class="icon-raspberrypi"></i>
           </div>
         </details>
 
@@ -105,17 +106,16 @@
             <i class="icon-html5"></i>
             <i class="icon-css3"></i>
             <i class="fas fa-universal-access"></i>
-            <i class="fab fa-js"></i>
-            <!-- <i class="fab fa-react"></i> -->
+            <i class="icon-javascript"></i>
+            <i class="icon-nodejs"></i>
             <!-- <i class="fab fa-sketch"></i>
             <i class="fab fa-figma"></i> -->
-            <i class="fab fa-git"></i>
+            <i class="icon-git"></i>
             <i class="fab fa-github"></i>
             <i class="fab fa-chrome"></i>
-            <i class="fas fa-terminal"></i>
-            <i class="fab fa-node"></i>
-            <i class="fab fa-docker"></i>
-            <i class="fab fa-linux"></i>
+            <i class="icon-shell"></i>
+            <i class="icon-docker"></i>
+            <i class="icon-ubuntu"></i>
           </div>
         </details>
 
@@ -131,21 +131,20 @@
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
+            <i class="icon-reactjs"></i>
+            <i class="icon-nodejs"></i>
+            <i class="icon-javascript"></i>
             <i class="icon-html5"></i>
             <i class="icon-css3"></i>
             <!-- <i class="fas fa-universal-access"></i> -->
-            <i class="fab fa-js"></i>
-            <i class="fab fa-react"></i>
-            <i class="icon-heroku"></i>
             <!-- <i class="fab fa-sketch"></i>
-            <i class="fab fa-figma"></i> -->
-            <i class="fab fa-git"></i>
-            <i class="fab fa-github"></i>
-            <i class="fab fa-chrome"></i>
-            <i class="fas fa-terminal"></i>
-            <i class="fab fa-node"></i>
-            <!-- <i class="fab fa-docker"></i> -->
-            <i class="fab fa-linux"></i>
+              <i class="fab fa-figma"></i> -->
+              <i class="icon-git></i>
+              <i class="fab fa-github"></i>
+              <i class="fab fa-chrome"></i>
+              <i class="icon-shell"></i>
+              <i class="icon-heroku"></i>
+            <i class="icon-ubuntu"></i>
           </div>
         </details>
 
@@ -162,7 +161,7 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
-            <i class="fab fa-git"></i>
+            <i class="icon-git"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-git" target="_blank"
             ><img src="./src/image/Codecademy_certificat_Git.jpg" alt="a certificate git"
@@ -170,7 +169,7 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
-            <i class="fas fa-terminal"></i>
+            <i class="icon-shell"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-the-command-line" target="_blank"
             ><img src="./src/image/Codecademy_certificat_cmd.jpg" alt="a certificate linux command line"
@@ -180,7 +179,7 @@
             <p><strong>Skills qualified:</strong></p>
             <i class="icon-html5"></i>
             <i class="icon-css3"></i>
-            <i class="fab fa-js"></i>
+            <i class="icon-javascript"></i>
           </div>
           <a href="https://www.codecademy.com/learn/build-interactive-websites" target="_blank"
             ><img
@@ -190,7 +189,7 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
-            <i class="fab fa-js"></i>
+            <i class="icon-javascript"></i>
           </div>
           <a href="https://www.codecademy.com/learn/introduction-to-javascript" target="_blank"
             ><img src="./src/image/Codecademy_certificat_JavaScript.jpg" alt="a certificate JavaScript"
@@ -198,7 +197,6 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified: Regular expressions</strong></p>
-            <i class="fab fa-regex"></i>
           </div>
           <a href="https://www.codecademy.com/learn/introduction-to-regular-expressions" target="_blank"
             ><img src="./src/image/Codecademy_regex.jpg" alt="a certificate regex"
@@ -213,8 +211,14 @@
           /></a>
 
           <div class="skill-set">
-            <p><strong>Skills qualified: TypeScript</strong></p>
-            <i class="fab fa-regex"></i>
+            <p><strong>Skills qualified: </strong></p>
+            <i><img
+            src="https://cdn.iconscout.com/icon/free/png-256/typescript-2336947-1982828.png"
+            srcset="https://cdn.iconscout.com/icon/free/png-512/typescript-2336947-1982828.png 2x"
+            alt="Typescript Icon"
+            width="30"
+            height="30"
+          /></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-typescript" target="_blank"
             ><img src="./src/image/Codecademy_learn-TypeScript-course.jpg" alt="a certificate TypeScript"
@@ -249,12 +253,9 @@
           <i class="icon-aws"></i>
           <i class="icon-heroku"></i>
           <i class="fab fa-chrome"></i>
+          <i class="icon-google-code"></i>
           <i class="fab fa-markdown"></i>
           <i class="fas fa-universal-access"></i>
-          <!-- <i class="fab fa-linux"></i> -->
-          <!-- <i class="fab fa-ubuntu"></i>
-          <i class="fab fa-apple"></i>
-          <i class="fab fa-windows"></i> -->
         </div>
         <h4>Databases</h4>
         <div class="skills-container">
@@ -272,6 +273,9 @@
         <h4>Programming languages</h4>
         <div class="skills-container">
           <i class="icon-css3"></i>
+          <i class="icon-html5"></i>
+          <i class="icon-javascript"></i>
+          <i class="icon-nodejs"></i>
           <img
             src="https://cdn.iconscout.com/icon/free/png-256/typescript-2336947-1982828.png"
             srcset="https://cdn.iconscout.com/icon/free/png-512/typescript-2336947-1982828.png 2x"
@@ -279,9 +283,6 @@
             width="40"
             height="40"
           />
-          <i class="icon-html5"></i>
-          <i class="icon-javascript"></i>
-          <i class="icon-nodejs"></i>
           <i class="icon-python"></i>
           <i class="icon-shell"></i>
           <i class="icon-php"></i>
