--- a/index.html
+++ b/index.html
@@ -212,12 +212,11 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified: </strong></p>
-            <i><img
+            <i class='icon-ts'><img
             src="https://cdn.iconscout.com/icon/free/png-256/typescript-2336947-1982828.png"
             srcset="https://cdn.iconscout.com/icon/free/png-512/typescript-2336947-1982828.png 2x"
             alt="Typescript Icon"
-            width="30"
-            height="30"
+            style="width: 30px; height: 30px;"
           /></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-typescript" target="_blank"
@@ -280,9 +279,8 @@
             src="https://cdn.iconscout.com/icon/free/png-256/typescript-2336947-1982828.png"
             srcset="https://cdn.iconscout.com/icon/free/png-512/typescript-2336947-1982828.png 2x"
             alt="Typescript Icon"
-            width="40"
-            height="40"
-          />
+            style="width: 30px; height: 30px;
+          / >
           <i class="icon-python"></i>
           <i class="icon-shell"></i>
           <i class="icon-php"></i>
