--- a/index.html
+++ b/index.html
@@ -230,6 +230,14 @@
           <a href="https://www.codecademy.com/learn/paths/web-development" target="_blank"
             ><img src="./src/image/Codecademy_Web-Development.jpg" alt="a certificate web development"
           /></a>
+
+          <div class="skill-set">
+            <p><strong>Skills qualified: Bootstrap</strong></p>
+            <i class="icon-bootstrap"></i>
+          </div>
+          <a href="https://www.codecademy.com/learn/learn-bootstrap" target="_blank"
+            ><img src="./src/image/Codecademy_Bootstrap.jpg" alt="a certificate bootstrap"
+          /></a
         </details>
       </section>
 
