--- a/index.html
+++ b/index.html
@@ -232,12 +232,20 @@
           /></a>
 
           <div class="skill-set">
-            <p><strong>Skills qualified: Bootstrap</strong></p>
+            <p><strong>Skills qualified: </strong></p>
             <i class="icon-bootstrap"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-bootstrap" target="_blank"
             ><img src="./src/image/Codecademy_Bootstrap.jpg" alt="a certificate bootstrap"
-          /></a
+          /></a>
+
+          <div class="skill-set">
+            <p><strong>Skills qualified: </strong></p>
+            <i class="fab fa-vuejs fa-lg fa-fw"></i>
+          </div>
+          <a href="https://www.codecademy.com/learn/learn-vue-js" target="_blank"
+            ><img src="./src/image/Codecademy_Vue.jpg" alt="a certificate Vue.js"
+          /></a>
         </details>
       </section>
 
@@ -274,6 +282,7 @@
         <h4>Frameworks</h4>
         <div class="skills-container">
           <i class="icon-reactjs"></i>
+          <i class="fab fa-vuejs fa-lg fa-fw"></i>
           <i class="icon-bootstrap"></i>
           <i class="icon-wordpress"></i>
         </div>
@@ -287,7 +296,7 @@
             src="https://cdn.iconscout.com/icon/free/png-256/typescript-2336947-1982828.png"
             srcset="https://cdn.iconscout.com/icon/free/png-512/typescript-2336947-1982828.png 2x"
             alt="Typescript Icon"
-            style="width: 30px; height: 30px;
+            style="width: 40px; height: 40px;"
           / >
           <i class="icon-python"></i>
           <i class="icon-shell"></i>
