--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
-            <i class="icon-html5"></i>
-            <i class="icon-css3"></i>
-            <i class="icon-wordpress"></i>
-            <i class="icon-javascript"></i>
-            <i class="icon-git"></i>
-            <i class="fab fa-chrome"></i>
-            <i class="icon-shell"></i>
-            <i class="icon-python"></i>
-            <i class="icon-nginx-alt"></i>
-            <i class="icon-docker"></i>
-            <i class="icon-ubuntu"></i>
-            <i class="icon-aws"></i>
-            <i class="icon-raspberrypi"></i>
+            <i class="icon-html5" title="html"></i>
+            <i class="icon-css3" title="css"></i>
+            <i class="icon-wordpress" title="wordpress"></i>
+            <i class="icon-javascript" title="JavaScript"></i>
+            <i class="icon-git" title="git"></i>
+            <i class="fab fa-chrome" title="chrome dev"></i>
+            <i class="icon-shell" title="cmd"></i>
+            <i class="icon-python" title="python"></i>
+            <i class="icon-nginx-alt" title="nginx"></i>
+            <i class="icon-docker" title="docker"></i>
+            <i class="icon-ubuntu" title="ubuntu"></i>
+            <i class="icon-aws" title="aws"></i>
+            <i class="icon-raspberrypi" title="raspberry pi"></i>
           </div>
         </details>
 
@@ -103,19 +103,19 @@
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
-            <i class="icon-html5"></i>
-            <i class="icon-css3"></i>
-            <i class="fas fa-universal-access"></i>
-            <i class="icon-javascript"></i>
-            <i class="icon-nodejs"></i>
+            <i class="icon-html5" title="html"></i>
+            <i class="icon-css3" title="css"></i>
+            <i class="fas fa-universal-access" title="universal access"></i>
+            <i class="icon-javascript" title="JavaScript"></i>
+            <i class="icon-nodejs" title="node js"></i>
             <!-- <i class="fab fa-sketch"></i>
             <i class="fab fa-figma"></i> -->
-            <i class="icon-git"></i>
-            <i class="fab fa-github"></i>
-            <i class="fab fa-chrome"></i>
-            <i class="icon-shell"></i>
-            <i class="icon-docker"></i>
-            <i class="icon-ubuntu"></i>
+            <i class="icon-git" title="git"></i>
+            <i class="fab fa-github" title="github"></i>
+            <i class="fab fa-chrome" title="chrome dev"></i>
+            <i class="icon-shell" title="cmd"></i>
+            <i class="icon-docker" title="docker"></i>
+            <i class="icon-ubuntu" title="ubuntu"></i>
           </div>
         </details>
 
@@ -131,20 +131,20 @@
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
-            <i class="icon-reactjs"></i>
-            <i class="icon-nodejs"></i>
-            <i class="icon-javascript"></i>
-            <i class="icon-html5"></i>
-            <i class="icon-css3"></i>
+            <i class="icon-reactjs" title="react"></i>
+            <i class="icon-nodejs" title="node js"></i>
+            <i class="icon-javascript" title="JavaScript"></i>
+            <i class="icon-html5" title="html"></i>
+            <i class="icon-css3" title="css"></i>
             <!-- <i class="fas fa-universal-access"></i> -->
             <!-- <i class="fab fa-sketch"></i>
               <i class="fab fa-figma"></i> -->
-              <i class="icon-git></i>
-              <i class="fab fa-github"></i>
-              <i class="fab fa-chrome"></i>
-              <i class="icon-shell"></i>
-              <i class="icon-heroku"></i>
-            <i class="icon-ubuntu"></i>
+            <i class="icon-git" title="git"></i>
+            <i class="fab fa-github" title="github"></i>
+            <i class="fab fa-chrome" title="chrome dev"></i>
+            <i class="icon-shell" title="cmd"></i>
+            <i class="icon-heroku" title="heroku"></i>
+            <i class="icon-ubuntu" title="ubuntu"></i>
           </div>
         </details>
 
@@ -153,7 +153,7 @@
           <summary class="project-titil">My certified skills</summary>
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
-            <i class="icon-html5"></i>
+            <i class="icon-html5" title="html5"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-html" target="_blank"
             ><img src="./src/image/first_certificat.jpg" alt="a certificate HTML"
@@ -161,7 +161,7 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
-            <i class="icon-git"></i>
+            <i class="icon-git" title="git"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-git" target="_blank"
             ><img src="./src/image/Codecademy_certificat_Git.jpg" alt="a certificate git"
@@ -169,7 +169,7 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
-            <i class="icon-shell"></i>
+            <i class="icon-shell" title="cmd"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-the-command-line" target="_blank"
             ><img src="./src/image/Codecademy_certificat_cmd.jpg" alt="a certificate linux command line"
@@ -177,9 +177,9 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
-            <i class="icon-html5"></i>
-            <i class="icon-css3"></i>
-            <i class="icon-javascript"></i>
+            <i class="icon-html5" title="html5"></i>
+            <i class="icon-css3" title="css"></i>
+            <i class="icon-javascript" title="JavaScript"></i>
           </div>
           <a href="https://www.codecademy.com/learn/build-interactive-websites" target="_blank"
             ><img
@@ -189,7 +189,7 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified:</strong></p>
-            <i class="icon-javascript"></i>
+            <i class="icon-javascript" title="JavaScript"></i>
           </div>
           <a href="https://www.codecademy.com/learn/introduction-to-javascript" target="_blank"
             ><img src="./src/image/Codecademy_certificat_JavaScript.jpg" alt="a certificate JavaScript"
@@ -204,7 +204,9 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified: Build REST API with Node/Express/SQL</strong></p>
-            <i class="fab fa-regex"></i>
+            <i class="fab fa-js fa-lg fa-fw" title="JavaScript"></i>
+            <i class="fab fa-node-js fa-lg fa-fw" title="node js"></i>
+            <i class="icon-mongodb" title="mongodb"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-node-sqlite" target="_blank"
             ><img src="./src/image/Codecademy_Node-SQLite.jpg" alt="a certificate node-sqlite"
@@ -212,20 +214,21 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified: </strong></p>
-            <i class='icon-ts'><img
-            src="https://cdn.iconscout.com/icon/free/png-256/typescript-2336947-1982828.png"
-            srcset="https://cdn.iconscout.com/icon/free/png-512/typescript-2336947-1982828.png 2x"
-            alt="Typescript Icon"
-            style="width: 30px; height: 30px;"
-          /></i>
+            <i class="icon-ts"
+              ><img
+                src="https://cdn.iconscout.com/icon/free/png-256/typescript-2336947-1982828.png"
+                srcset="https://cdn.iconscout.com/icon/free/png-512/typescript-2336947-1982828.png 2x"
+                alt="Typescript Icon"
+                style="width: 30px; height: 30px"
+                title="TypeScript"
+            /></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-typescript" target="_blank"
             ><img src="./src/image/Codecademy_learn-TypeScript-course.jpg" alt="a certificate TypeScript"
           /></a>
 
           <div class="skill-set">
-            <p><strong>Skills qualified: Web development</strong></p>
-            <i class="fab fa-regex"></i>
+            <p><strong>Skills qualified: Web development - MERN/PERN Stack</strong></p>
           </div>
           <a href="https://www.codecademy.com/learn/paths/web-development" target="_blank"
             ><img src="./src/image/Codecademy_Web-Development.jpg" alt="a certificate web development"
@@ -233,7 +236,7 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified: </strong></p>
-            <i class="icon-bootstrap"></i>
+            <i class="icon-bootstrap" title="bootstrap"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-bootstrap" target="_blank"
             ><img src="./src/image/Codecademy_Bootstrap.jpg" alt="a certificate bootstrap"
@@ -241,7 +244,7 @@
 
           <div class="skill-set">
             <p><strong>Skills qualified: </strong></p>
-            <i class="fab fa-vuejs fa-lg fa-fw"></i>
+            <i class="fab fa-vuejs fa-lg fa-fw" title="vue"></i>
           </div>
           <a href="https://www.codecademy.com/learn/learn-vue-js" target="_blank"
             ><img src="./src/image/Codecademy_Vue.jpg" alt="a certificate Vue.js"
@@ -255,56 +258,52 @@
         <!-- https://www.w3schools.com/icons/fontawesome5_icons_brands.asp -->
         <h4>Applications and operating systems</h4>
         <div class="skills-container">
-          <i class="icon-osx"></i>
-          <i class="icon-ubuntu"></i>
-          <i class="icon-alpinelinux"></i>
-          <i class="icon-debian"></i>
-          <i class="icon-docker"></i>
-          <i class="icon-nginx-alt"></i>
-          <i class="icon-git"></i>
-          <i class="fab fa-github"></i>
-          <i class="icon-npm"></i>
-          <i class="fab fa-yarn"></i>
-          <i class="icon-aws"></i>
-          <i class="icon-heroku"></i>
-          <i class="fab fa-chrome"></i>
-          <i class="icon-google-code"></i>
-          <i class="fab fa-markdown"></i>
-          <i class="fas fa-universal-access"></i>
+          <i class="icon-osx" title="OSX"></i>
+          <i class="icon-ubuntu" title="ubuntu"></i>
+          <i class="icon-alpinelinux" title="alpinelinux"></i>
+          <i class="icon-debian" title="debian"></i>
+          <i class="icon-docker" title="docker"></i>
+          <i class="icon-nginx-alt" title="nginx"></i>
+          <i class="icon-git" title="git"></i>
+          <i class="fab fa-github" title="github"></i>
+          <i class="icon-npm" title="npm"></i>
+          <i class="fab fa-yarn" title="yarn"></i>
+          <i class="icon-aws" title="aws"></i>
+          <i class="icon-heroku" title="heroku"></i>
+          <i class="fab fa-chrome" title="chrome dev"></i>
+          <i class="fab fa-markdown" title="markdown"></i>
+          <i class="fas fa-universal-access" title="universal access"></i>
         </div>
         <h4>Databases</h4>
         <div class="skills-container">
-          <i class="icon-mongodb"></i>
-          <i class="icon-postgres-alt"></i>
-          <i class="icon-mysql"></i>
-          <i class="icon-mariadb"></i>
+          <i class="icon-mongodb" title="mongodb"></i>
+          <i class="icon-postgres-alt" title="postgres"></i>
+          <i class="icon-mysql" title="mysql"></i>
+          <i class="icon-mariadb" title="mariadb"></i>
         </div>
         <h4>Frameworks</h4>
         <div class="skills-container">
-          <i class="icon-reactjs"></i>
-          <i class="fab fa-vuejs fa-lg fa-fw"></i>
-          <i class="icon-bootstrap"></i>
-          <i class="icon-wordpress"></i>
+          <i class="icon-reactjs" title="react"></i>
+          <i class="fab fa-vuejs fa-lg fa-fw" title="vue"></i>
+          <i class="icon-bootstrap" title="bootstrap"></i>
+          <i class="icon-wordpress" title="wordpress"></i>
         </div>
         <h4>Programming languages</h4>
         <div class="skills-container">
-          <i class="icon-css3"></i>
-          <i class="icon-html5"></i>
-          <i class="icon-javascript"></i>
-          <i class="icon-nodejs"></i>
-          <img
-            src="https://cdn.iconscout.com/icon/free/png-256/typescript-2336947-1982828.png"
-            srcset="https://cdn.iconscout.com/icon/free/png-512/typescript-2336947-1982828.png 2x"
-            alt="Typescript Icon"
-            style="width: 40px; height: 40px;"
-          / >
-          <i class="icon-python"></i>
-          <i class="icon-shell"></i>
-          <i class="icon-php"></i>
+          <i class="icon-css3" title="css"></i>
+          <i class="icon-html5" title="html"></i>
+          <i class="icon-javascript" title="JavaScript"></i>
+          <i class="icon-nodejs" title="node js"></i>
+          <img src="https://cdn.iconscout.com/icon/free/png-256/typescript-2336947-1982828.png"
+          srcset="https://cdn.iconscout.com/icon/free/png-512/typescript-2336947-1982828.png 2x" alt="Typescript Icon"
+          style="width: 40px; height: 40px;" title="TypeScript" / >
+          <i class="icon-python" title="python"></i>
+          <i class="icon-shell" title="cmd"></i>
+          <i class="icon-php" title="php"></i>
         </div>
-        <h4>favoriate hardwares</h4>
+        <h4>Hobbies</h4>
         <div class="skills-container">
-          <i class="icon-raspberrypi"></i>
+          <i class="icon-raspberrypi" title="raspberry pi"></i>
         </div>
       </section>
 
