--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
         <!-- 2nd project -->
         <details class="project" close>
           <summary class="project-title">
-            My first project with Vanilla JS in frontend and Node-Express-SQL in backend
+            My first project with Vanilla JS in frontend and NodeJS/Postgres in backend
           </summary>
           <a href="https://numagaconsulting.github.io/live/mixed-message/" target="_blank"
             ><img src="./src/image/quotes.jpg" alt="a site loads random quotes" class="project-image"
           /></a>
           <p class="project-description">
-            My first portofolio project, which the backend REST API is built with Node/Express/Sqlite deployed on the
-            docker, and frontend page hosted on github page and fetching data from the backend.
+            My first portofolio project, which the backend REST API is built with Node/Postgres deployed on the seperate
+            containerlized endpoints, and frontend page hosted on github page and fetching data from the backend.
           </p>
           <div class="skill-set">
             <p><strong>Skills applied:</strong></p>
@@ -203,7 +203,7 @@
           /></a>
 
           <div class="skill-set">
-            <p><strong>Skills qualified: Build REST API with Node/Express/SQL</strong></p>
+            <p><strong>Skills qualified: Build REST API with NodeJS/Express/SQL</strong></p>
             <i class="fab fa-js fa-lg fa-fw" title="JavaScript"></i>
             <i class="fab fa-node-js fa-lg fa-fw" title="node js"></i>
             <i class="icon-mongodb" title="mongodb"></i>
