--- a/index.html
+++ b/index.html
@@ -249,6 +249,14 @@
           <a href="https://www.codecademy.com/learn/learn-vue-js" target="_blank"
             ><img src="./src/image/Codecademy_Vue.jpg" alt="a certificate Vue.js"
           /></a>
+
+          <div class="skill-set">
+            <p><strong>Skills qualified: </strong></p>
+            <i class="icon-go" title="go"></i>
+          </div>
+          <a href="https://www.codecademy.com/learn/learn-go" target="_blank"
+            ><img src="./src/image/Codecademy_go.jpg" alt="a certificate for Go"
+          /></a
         </details>
       </section>
 
@@ -298,8 +306,8 @@
           srcset="https://cdn.iconscout.com/icon/free/png-512/typescript-2336947-1982828.png 2x" alt="Typescript Icon"
           style="width: 40px; height: 40px;" title="TypeScript" / >
           <i class="icon-python" title="python"></i>
+          <i class="icon-go" title="go"></i>
           <i class="icon-shell" title="cmd"></i>
-          <i class="icon-php" title="php"></i>
         </div>
         <h4>Hobbies</h4>
         <div class="skills-container">
