--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- <h3>Contact</h3> -->
       <!-- contact -->
       <nav>
-        <a href="https://github.com/NumagaConsulting" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/numaga94" target="_blank"><i class="fab fa-github"></i></a>
         <a href="mailto:contact@numaga.fr"><i class="fas fa-feather-alt"></i></a>
       </nav>
     </header>
@@ -94,7 +94,7 @@
           <summary class="project-title">
             My first project with Vanilla JS in frontend and NodeJS/Postgres in backend
           </summary>
-          <a href="https://numagaconsulting.github.io/live/mixed-message/" target="_blank"
+          <a href="https://numaga94.github.io/live/mixed-message/" target="_blank"
             ><img src="./src/image/quotes.jpg" alt="a site loads random quotes" class="project-image"
           /></a>
           <p class="project-description">
